--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -17,9 +17,9 @@ import { Icon } from 'astro-icon/components';
             <a class="nav-link" href="#">Servicios</a>
             <a class="nav-link" href="#">Contacto</a>
         </ul>
-        <button class="nav-button">
+        <a class="nav-button">
             <Icon name="bx:moon" size={30}/>
-        </button>
+        </a>
     </div>
 </nav>
 
