--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,11 @@
 ---
+import Hero from 'src/content/Hero.astro';
 import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout title="Portfolio de Nehuen Cuenca">
 	<main>
-		<h1>Hola Mundo</h1>
+		<Hero />
 	</main>
 </Layout>
 
