--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,13 @@
 ---
-import Hero from 'src/content/Hero.astro';
+import Hero from '@content/Hero.astro';
 import Layout from '../layouts/Layout.astro';
+import FormationSection from '@content/FormationSection.astro';
 ---
 
 <Layout title="Portfolio de Nehuen Cuenca">
 	<main>
 		<Hero />
+		<FormationSection />
 	</main>
 </Layout>
 
