--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -30,6 +30,7 @@ import { Icon } from 'astro-icon/components';
     padding: 0 1rem;
     background: rgb(0,60,67);
     background: var(--navbar-fade-bg);
+    color: var(--color-titles);
     display: flex;
     align-items: center;
     justify-content: space-between;
