--- a/src/content/FormationSection.astro
+++ b/src/content/FormationSection.astro
@@ -32,6 +32,7 @@
 
     .formation-container__title{
         font: normal normal 600 clamp(2.2rem, 6vw, 3rem) var(--display-font, Tahoma);
+        color: var(--color-titles);
     }
 
     .formation-list, .formation-list-item{
@@ -55,6 +56,7 @@
 
     .formation-list-item__title{
         font: normal normal 600 clamp(1.5rem, 6vw, 2rem) var(--display-font, Tahoma);
+        color: var(--color-titles);
     }
     .formation-list-item__paragraph{
         font: normal normal 200 clamp(1.2rem, 6vw, 1.5rem) var(--default-font, Arial);
@@ -67,6 +69,10 @@
         background-color: var(--color-font);
         color: var(--color-bg);
         border-radius: 10px;
+        transition: background .4s ease;
+    }
+    .download-cv-button:hover{
+        background-color: var(--color-titles);
     }
     @media (width >= 700px) {
         .formation-list{
