Add projects section and images of projects

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,12 +2,14 @@
 import Hero from '@content/Hero.astro';
 import Layout from '../layouts/Layout.astro';
 import FormationSection from '@content/FormationSection.astro';
+import ProjectsSection from '@content/ProjectsSection.astro';
 ---
 
 <Layout title="Portfolio de Nehuen Cuenca">
 	<main>
 		<Hero />
 		<FormationSection />
+		<ProjectsSection />
 	</main>
 </Layout>
 
