--- a/src/content/FormationSection.astro
+++ b/src/content/FormationSection.astro
@@ -64,6 +64,7 @@
     
     .download-cv-button{
         margin-top: 2rem;
+        margin-bottom: 4rem;
         padding: 1rem 2rem;
         font: normal normal 400 clamp(1.3rem, 4vw, 1.6rem) var(--display-font, Tahoma);
         background-color: var(--color-font);
