Add technologies section but with the dropdown menu is static

--- a/src/content/ProjectsSection.astro
+++ b/src/content/ProjectsSection.astro
@@ -85,6 +85,7 @@ import { Icon } from "astro-icon/components";
             </div>
         </li>
     </ul>
+    <!-- TODO: DO THE MODAL WITHIN A DESCRIPTION OF EACH PROJECT CARD -->
 </section>
 
 <style>
