--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Hero from '@content/Hero.astro';
 import Layout from '../layouts/Layout.astro';
 import FormationSection from '@content/FormationSection.astro';
 import ProjectsSection from '@content/ProjectsSection.astro';
+import TechnologiesSection from '@content/TechnologiesSection.astro';
 ---
 
 <Layout title="Portfolio de Nehuen Cuenca">
@@ -10,6 +11,7 @@ import ProjectsSection from '@content/ProjectsSection.astro';
 		<Hero />
 		<FormationSection />
 		<ProjectsSection />
+		<TechnologiesSection />
 	</main>
 </Layout>
 
