Add services section with images

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Layout from '../layouts/Layout.astro';
 import FormationSection from '@content/FormationSection.astro';
 import ProjectsSection from '@content/ProjectsSection.astro';
 import TechnologiesSection from '@content/TechnologiesSection.astro';
+import ServicesSection from '@content/ServicesSection.astro';
 ---
 
 <Layout title="Portfolio de Nehuen Cuenca">
@@ -12,6 +13,7 @@ import TechnologiesSection from '@content/TechnologiesSection.astro';
 		<FormationSection />
 		<ProjectsSection />
 		<TechnologiesSection />
+		<ServicesSection />
 	</main>
 </Layout>
 
