--- a/src/content/ProjectsSection.astro
+++ b/src/content/ProjectsSection.astro
@@ -133,7 +133,7 @@ import { Icon } from "astro-icon/components";
         height: clamp(300px, 60vh, 420px);
         background-color: var(--color-bg);
         border-radius: 10px;
-        box-shadow: 3px 3px var(--color-shadow);
+        box-shadow: 4px 4px 10px var(--color-shadow);
         display: flex;
         flex-direction: column;
         align-items: center;
