Add footer. Add links to each section in the navbar. Add more spacing in ContactSection

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -4,18 +4,18 @@ import { Icon } from 'astro-icon/components';
 ---
 <nav>
     <div class="nav-mobile">
-        <a class="nav-link home-link" href="#">Inicio</a>
+        <a class="nav-link home-link" href="#hero-section">Inicio</a>
         <button class="nav-button">
             <Icon name="bx:menu" size={30}/>
         </button>
     </div>
     <div class="nav-desktop">
-        <a class="nav-link home-link" href="#">Inicio</a>
+        <a class="nav-link home-link" href="#hero-section">Inicio</a>
         <ul class="nav-desktop__sections-links-list">
-            <a class="nav-link" href="#">Formacion</a>
-            <a class="nav-link" href="#">Proyectos</a>
-            <a class="nav-link" href="#">Servicios</a>
-            <a class="nav-link" href="#">Contacto</a>
+            <a class="nav-link" href="#formation-section">Formacion</a>
+            <a class="nav-link" href="#projects-section">Proyectos</a>
+            <a class="nav-link" href="#services-section">Servicios</a>
+            <a class="nav-link" href="#contact-section">Contacto</a>
         </ul>
         <a class="nav-button">
             <Icon name="bx:moon" size={30}/>
