--- a/src/content/ContactSection.astro
+++ b/src/content/ContactSection.astro
@@ -39,12 +39,12 @@ import dev_ilustration from '../assets/ilustrations/dev-ilustration.png'
             <h3 class="ways-to-contact__subtitle">También podés hablar conmigo por acá</h3>
             <ul class="contact-ways-list">
                 <li class="contact-ways-list-item">
-                    <Icon class="contact-ways-list-item__way-icon"name="bx:mail-send" size={40} />
+                    <Icon class="contact-ways-list-item__way-icon" name="bx:mail-send" size={40} />
                     <span class="contact-ways-list-item__way-name">Email</span>
                     <a href="mailto:nehuen.cuenca@yahoo.com" class="contact-ways-list-item__way-keyword">nehuen.cuenca@yahoo.com</a>
                 </li>
                 <li class="contact-ways-list-item">
-                    <Icon class="contact-ways-list-item__way-icon"name="mdi:linkedin" size={40} />
+                    <Icon class="contact-ways-list-item__way-icon" name="mdi:linkedin" size={40} />
                     <span class="contact-ways-list-item__way-name">LinkedIn</span>
                     <a href="https://www.linkedin.com/in/nehuen-cuenca/" target="_blank" class="contact-ways-list-item__way-keyword">Nehuen Cuenca</a>
                 </li>
@@ -62,13 +62,14 @@ import dev_ilustration from '../assets/ilustrations/dev-ilustration.png'
         flex-direction: column;
         align-items: center;
         gap: 2rem;
-        padding-bottom: 3rem;
+        padding-bottom: 5rem;
     }
 
     .services-container__divider {
         width: 100%;
         overflow: hidden;
         line-height: 0;
+        margin-bottom: 2rem;
     }
 
     .services-container__divider svg {
