--- a/src/content/Hero.astro
+++ b/src/content/Hero.astro
@@ -1,7 +1,7 @@
 ---
 import { Icon } from 'astro-icon/components';
 ---
-<section class="hero-container">
+<section class="hero-container" id="hero-section">
     <h1 class="hero-container__title">¡HOLA!<br>SOY NEHUEN CUENCA,</h1>
     <h2 class="hero-container__subtitle">y soy un desarrollador web<br>en proceso 🤓.</h2>
     <div class="divider">
