--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -9,6 +9,7 @@ const { title } = Astro.props;
 import '@fontsource/manjari';
 import '@fontsource/lemon';
 import Navbar from '@components/Navbar.astro';
+import Footer from '@components/Footer.astro';
 
 ---
 
@@ -27,6 +28,7 @@ import Navbar from '@components/Navbar.astro';
 			<Navbar />
 		</header>
 		<slot />
+		<Footer />
 	</body>
 </html>
 <style is:global>
@@ -48,7 +50,7 @@ import Navbar from '@components/Navbar.astro';
 		--color-titles: var(--aqua-green-dark);
 		--color-details: var(--aqua-green-mid-light);
 		--color-shadow: rgba(0,0,0, 0.4);
-		--navbar-fade-bg: linear-gradient(180deg, var(--aqua-green-dark) 0%, var(--aqua-green-mid-light) 40%, var(--aqua-green-light) 100%);
+		--navbar-fade-bg: linear-gradient(180deg, var(--aqua-green-dark) 0%, var(--aqua-green-mid-light) 35%, var(--aqua-green-light) 100%);
 		--projects-fade-bg: linear-gradient(180deg, rgba(119,176,170,1) 95%, rgba(227,254,247,1) 100%);
 		background-color: var(--color-bg);
 		color: var(--color-font);
@@ -60,7 +62,7 @@ import Navbar from '@components/Navbar.astro';
 		--color-titles: var(--aqua-green-light);
 		--color-details: var(--aqua-green-dark-soft);
 		--color-shadow: transparent;
-		--navbar-fade-bg: linear-gradient(180deg, var(--aqua-green-light) 0%, var(--aqua-green-dark-soft) 40%, var(--aqua-green-dark) 100% );
+		--navbar-fade-bg: linear-gradient(180deg, var(--aqua-green-light) 0%, var(--aqua-green-dark-soft) 35%, var(--aqua-green-dark) 100% );
 		--projects-fade-bg: linear-gradient(180deg, rgba(19,93,102,1) 95%, rgba(0,60,67,1) 100%);
 		background-color: var(--color-bg);
 		color: var(--color-font);
